Big ugly commit...
Removed Spring elements
Added contree game, still in progress
Refactoring